# mediaconverter

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  index.html  package-lock.json  package.json  presets.json  tailwind.config.cjs  tsconfig.json  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: build.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: ffmpeg.rs  main.rs  progress.rs
src/api/: ffmpeg.ts
src/components/: DatasetTools.tsx  FilePicker.tsx  ImageTools.tsx  InspectorTools.tsx  JobQueue.tsx  StandardizeTools.tsx  VideoTools.tsx
src/styles/: index.css
