[package]
name = "ffmpeg-gui"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "dialog-all"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
csv = "1.3"

[features]
custom-protocol = ["tauri/custom-protocol"]
